# prism

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  PRISM_VM_IMPLEMENTATION_DESIGN.md  README.md  docker-compose.yml  flake.nix  justfile  multi-target.md  new.md  test_canonical_parser.rs  total.md
crates/prism-ai/: Cargo.toml  README.md
crates/prism-ai/examples/: complete_metadata_collection.rs
crates/prism-ai/src/: context.rs  export.rs  integration.rs  lib.rs  metadata.rs  providers.rs
crates/prism-ast/: Cargo.toml
crates/prism-ast/src/: arena.rs  expr.rs  lib.rs  metadata.rs  node.rs  pattern.rs  stmt.rs  transformations.rs  type_inference.rs  types.rs  visitor.rs
crates/prism-ast/src/arena/: core.rs  integration.rs  mod.rs  optimization.rs  semantic.rs  serialization.rs
crates/prism-ast/tests/: integration_test.rs  test_arena.rs  test_expr.rs  test_lib.rs  test_metadata.rs  test_node.rs  test_pattern.rs  test_stmt.rs  test_type_inference.rs  test_types.rs  test_visitor.rs
crates/prism-cli/: Cargo.toml
crates/prism-cli/src/: lib.rs  main.rs
crates/prism-cli/tests/: integration_test.rs
crates/prism-codegen/: Cargo.toml
crates/prism-codegen/examples/: webassembly_demo.rs
crates/prism-codegen/src/: lib.rs
crates/prism-codegen/src/backends/: llvm.rs  mod.rs  typescript.rs
crates/prism-cohesion/: Cargo.toml
crates/prism-cohesion/src/: ai_insights.rs  analysis.rs  boundaries.rs  confidence.rs  lib.rs  metrics.rs  suggestions.rs  violations.rs
crates/prism-cohesion/src/metrics/: business_cohesion.rs  dependency_cohesion.rs  semantic_cohesion.rs  type_cohesion.rs
crates/prism-cohesion/src/restructuring/: actions.rs  engine.rs  executor.rs  integration.rs  mod.rs  safety.rs
crates/prism-common/: Cargo.toml
crates/prism-common/src/: ai_metadata.rs  diagnostics.rs  lib.rs  optimization_traits.rs  parsing_traits.rs  source_maps.rs  span.rs  suggestion.rs  symbol.rs
crates/prism-compiler/: Cargo.toml  PARSER_INTEGRATION_SUMMARY.md
crates/prism-compiler/examples/: parser_integration_demo.rs  symbol_management_usage.rs  symbol_system_usage.rs
crates/prism-compiler/src/: ai_export.rs  ai_integration.rs  cache.rs  codegen_coordination.rs  context.rs  error.rs  integration.rs  language_server.rs  lib.rs  module_registry.rs  parallel.rs  query.rs  resolution.rs  scope.rs  semantic.rs  symbol_integration.rs  symbol_table.rs  validation.rs
crates/prism-compiler/src/context/: builder.rs  compilation.rs  diagnostics.rs  metadata.rs  mod.rs  profiling.rs  project.rs
crates/prism-compiler/src/query/: ai_metadata.rs  core.rs  incremental.rs  integration.rs  integration_test.rs  mod.rs  optimization.rs  orchestrator.rs  pipeline.rs  scope_queries.rs  semantic_queries.rs  symbol_queries.rs
crates/prism-compiler/src/scope/: boundaries.rs  builder.rs  data.rs  kinds.rs  metadata.rs  mod.rs  tree.rs  visibility.rs
crates/prism-compiler/src/semantic/: analysis.rs  contracts.rs  database.rs  effects.rs  export.rs  integration.rs  mod.rs  relationships.rs
crates/prism-compiler/src/symbols/: ai_provider.rs  builder.rs  cache.rs  data.rs  extractor.rs  integration.rs  kinds.rs  metadata.rs  mod.rs  registry.rs  table.rs
crates/prism-compiler/src/validation/: coordinator.rs  integration.rs  mod.rs  orchestrator.rs  reporting.rs
crates/prism-compiler/tests/: symbol_system_integration_test.rs
crates/prism-constraints/: Cargo.toml
crates/prism-constraints/src/: builtin.rs  engine.rs  error.rs  evaluator.rs  lib.rs  validators.rs
crates/prism-documentation/: Cargo.toml
crates/prism-documentation/examples/: validation_demo.rs
crates/prism-documentation/src/: ai_integration.rs  extraction.rs  generation.rs  jsdoc.rs  lib.rs  requirements.rs
crates/prism-documentation/src/validation/: checkers.rs  mod.rs  rules.rs  semantic.rs  tests.rs
crates/prism-documentation/templates/: default.css
crates/prism-effects/: Cargo.toml
crates/prism-effects/src/: ai_integration.rs  capability.rs  lib.rs  security_trust.rs
crates/prism-effects/src/ai/: integration.rs  mod.rs  safety_analysis.rs
crates/prism-effects/src/effects/: composition.rs  definition.rs  inference.rs  lifecycle.rs  mod.rs  monitoring.rs  registry.rs
crates/prism-effects/src/execution/: handlers.rs  mod.rs  plan.rs  registry.rs
crates/prism-effects/src/security/: capabilities.rs  context.rs  information_flow.rs  mod.rs  trust.rs
crates/prism-effects/src/validation/: mod.rs
crates/prism-lexer/: Cargo.toml  test_enhanced_literals.rs
crates/prism-lexer/src/: lexer.rs  lib.rs  recovery.rs  semantic.rs  semantic_lexer.rs  syntax.rs  tests.rs  token.rs
crates/prism-parser/: Cargo.toml
crates/prism-parser/src/: combinators.rs  constraint_validation.rs  lib.rs  parser.rs  recovery.rs
crates/prism-parser/src/analysis/: combinators.rs  constraint_validation.rs  mod.rs  semantic_context_extractor.rs  token_semantic_analyzer.rs
crates/prism-parser/src/core/: delimiter_matcher.rs  error.rs  mod.rs  parse_trait.rs  parsing_coordinator.rs  precedence.rs  (+2 more)
crates/prism-pir/: Cargo.toml
crates/prism-pir/src/: contracts.rs  effects.rs  lib.rs  validation.rs
crates/prism-pir/tests/: integration_tests.rs
crates/prism-runtime/: Cargo.toml
crates/prism-runtime/src/: ai_integration.rs  lib.rs
crates/prism-runtime/tests/: integration_tests.rs  unit_tests.rs
crates/prism-semantic/: Cargo.toml
crates/prism-semantic/src/: ai_integration.rs  analyzer.rs  context.rs  database.rs  inference.rs  lib.rs  patterns.rs  types.rs  validation.rs
crates/prism-syntax/: Cargo.toml
crates/prism-syntax/src/: ai_integration.rs  lib.rs
crates/prism-syntax/tests/: multi_syntax_coordinator_test.rs  python_basic_test.rs  python_integration_test.rs
crates/prism-vm/: Cargo.toml
crates/prism-vm/benches/: allocator_bench.rs
crates/prism-vm/examples/: hello_world.rs  jit_capability_guards_demo.rs  security_constraint_optimization_demo.rs
crates/prism-vm/src/: lib.rs
crates/prism-vm/tests/: capability_verification_consistency_test.rs  effect_integration_test.rs  vm_integration_test.rs
(+379 files in other folders)
