[package]
name = "prism-ai"
version = "0.1.0"
edition = "2021"
description = "AI integration and metadata export for the Prism language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/prism-lang/prism"
authors = ["Prism Language Team"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Prism dependencies
prism-common = { path = "../prism-common" }
prism-ast = { path = "../prism-ast" }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = [] 