[package]
name = "prism-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Code generation for the Prism programming language"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
prism-common = { workspace = true }
prism-ast = { workspace = true }
prism-pir = { workspace = true }

# Core dependencies
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

# Code generation backends
# inkwell = { workspace = true }  # LLVM backend - temporarily disabled due to LLVM dependency issues
swc_core = { workspace = true }  # JavaScript/TypeScript backend

# Logging
tracing = { workspace = true }

# Time handling for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Python backend dependencies
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }

[features]
default = []
serde = ["dep:serde", "prism-common/serde", "prism-ast/serde"]

[dev-dependencies]
insta.workspace = true 