[package]
name = "prism-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Query-based compilation engine for the Prism programming language"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
prism-common = { path = "../prism-common" }
prism-ast = { path = "../prism-ast" }
prism-lexer = { path = "../prism-lexer" }
prism-parser = { path = "../prism-parser" }
prism-semantic = { path = "../prism-semantic" }
prism-codegen = { path = "../prism-codegen" }
prism-pir = { path = "../prism-pir" }
prism-effects = { path = "../prism-effects" }
prism-constraints = { path = "../prism-constraints" }
prism-cohesion = { path = "../prism-cohesion" }
prism-documentation = { path = "../prism-documentation" }
prism-ai = { path = "../prism-ai" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Concurrency and collections
rustc-hash = "1.1"
dashmap = "5.4"
rayon = "1.7"
crossbeam = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Time and dates for AI metadata
chrono = { version = "0.4", features = ["serde"] }

# File system operations
notify = "6.0"
walkdir = "2.3"

# System info
num_cpus = "1.15"

# Async trait support
async-trait = "0.1"

# Development dependencies
[dev-dependencies]
tempfile = "3.5"
pretty_assertions = "1.3"

# [[bench]]
# name = "query_engine"
# harness = false

# [[bench]]
# name = "parallel_compilation"
# harness = false 

[features]
default = ["ai-integration"]
ai-integration = [] 