[package]
name = "prism-documentation"
version = "0.1.0"
edition = "2021"
description = "Documentation validation and JSDoc compatibility for Prism language (PSG-003)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/prism-lang/prism"
keywords = ["documentation", "validation", "jsdoc", "compiler", "prism"]
categories = ["development-tools", "compilers"]

[dependencies]
# Core Prism dependencies
prism-common = { path = "../prism-common" }
prism-ast = { path = "../prism-ast" }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Text processing and regex
regex = "1.10"
once_cell = "1.19"

# Error handling
thiserror = "1.0"

# Optional features
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

[features]
default = ["validation", "jsdoc", "ai-integration"]
validation = []
jsdoc = []
ai-integration = []
tracing = ["dep:tracing"] 