[package]
name = "prism-effects"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Effect system and capability-based security for Prism with external AI integration"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
prism-common.workspace = true
prism-ast.workspace = true
prism-semantic.workspace = true
prism-ai = { workspace = true }
async-trait = { workspace = true }
petgraph.workspace = true
rustc-hash.workspace = true
indexmap.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.16", optional = true }

[features]
default = ["monitoring", "serde"]
serde = ["dep:serde", "prism-common/serde", "prism-ast/serde", "prism-semantic/serde"]
monitoring = []
linux-monitoring = ["dep:procfs"]

[dev-dependencies]
insta.workspace = true 