[package]
name = "prism-lexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lexical analyzer for the Prism programming language"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
prism-common.workspace = true
logos.workspace = true
thiserror.workspace = true
regex = "1.10"
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "prism-common/serde"]

[dev-dependencies]
insta.workspace = true 