[package]
name = "prism-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Parser for the Prism programming language"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
prism-common.workspace = true
prism-lexer.workspace = true
prism-ast.workspace = true
prism-semantic.workspace = true
prism-syntax.workspace = true
nom.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "prism-common/serde", "prism-lexer/serde", "prism-ast/serde"]

[dev-dependencies]
insta.workspace = true 