[package]
name = "prism-pir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Prism Intermediate Representation - semantic bridge between compilation and code generation"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"

# Prism dependencies
prism-common = { path = "../prism-common" }
prism-ast = { path = "../prism-ast" }
prism-effects = { path = "../prism-effects" }
prism-ai = { path = "../prism-ai" }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] } 