[package]
name = "prism-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Runtime support for the Prism programming language"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies for resource management
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
uuid = { version = "1.10", features = ["v4", "serde"] }
futures = { version = "0.3" }
num_cpus = { version = "1.16" }
serde_json = "1.0"

# Essential dependencies for compilation
prism-common = { workspace = true }
tracing = { workspace = true }

# Temporarily removed to focus on resource management
# prism-effects = { workspace = true }
# prism-ai = { workspace = true }
# petgraph = { workspace = true }
# indexmap = { workspace = true }
# rustc-hash = { workspace = true }

[features]
default = []

[dev-dependencies]
insta.workspace = true 