[package]
name = "prism-vm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Prism Virtual Machine with bytecode compilation and execution"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
num_cpus = "1.16"
crossbeam = "0.8"
rayon = "1.8"

# For async/await support in the future
tokio = { version = "1.0", features = ["full"], optional = true }

# Serialization support
serde = { version = "1.0", features = ["derive"], optional = true }

# Workspace dependencies
prism-common = { workspace = true }
prism-pir = { workspace = true }
prism-runtime = { workspace = true }

# Core dependencies
thiserror = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }

# Logging
tracing = { workspace = true }

# Collections and data structures
indexmap = "2.1"
smallvec = "1.11"

# Bytecode serialization
bincode = "1.3"

# JIT compilation support (optional)
cranelift = { version = "0.102", optional = true }
cranelift-jit = { version = "0.102", optional = true }
cranelift-module = { version = "0.102", optional = true }

[features]
default = ["gc"]
gc = []
async = ["tokio"]
serde = ["dep:serde"]
debug = []
profiler = []

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "fibonacci"
path = "examples/fibonacci.rs"

# [[bench]]
# name = "interpreter_bench"
# harness = false 