[package]
name = "prism-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
prism-pir = { path = "../prism-pir" }
prism-runtime = { path = "../prism-runtime" }
prism-effects = { path = "../prism-effects" }
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.11"
tracing = "0.1"
crossbeam = "0.8"
crossbeam-queue = "0.3"
crossbeam-deque = "0.8"
num_cpus = "1.0"
rayon = "1.7"
lru = "0.12"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "allocator_bench"
harness = false

[features]
default = ["jit"]
jit = []